# harness

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-daytona-snapshot.yml
agents/: demo.yaml
scripts/: migrate_turso_to_daytona.py  run_demo.py  run_live.py
src/harness/: __init__.py  cli.py  config.py  config_loader.py  constants.py  context.py  harness.py
src/harness/cloud/: __init__.py  autoconfig.py
src/harness/cloud/bedrock/: __init__.py  client.py  config.py  runtime.py  trace_sink.py
src/harness/core/: llm.py  runtime.py  runtime_api.py  storage.py  tracer.py  tracing.py
src/harness/evals/: __init__.py  actors.py  base.py  cli_entry.py  clock.py  context.py  memory_gen.py  runner.py  types.py
src/harness/evals/fakes/: __init__.py  base.py  computer.py  contacts.py  documents.py  email.py  projects.py  sms.py
src/harness/evals/fakes/migrations/: 0001_fakes_schema.sql  0002_test_state_adapters.sql
src/harness/evals/scenarios/: __init__.py  blue_red_shoes_heavy.py  blue_red_shoes_light.py  blue_red_shoes_medium.py  curl_wget_heavy.py  curl_wget_light.py  draft_before_send_heavy.py  group_lunch_fresh.py  group_lunch_memory.py  multi_stakeholder_scheduling.py  preference_channel_fidelity.py  smoke.py  thursday_no_meetings_heavy.py  vegetarian_restaurant_heavy.py
src/harness/evals/scenarios/vending/: __init__.py  economics.py  handlers.py  simulation.py  state.py
src/harness/memory/: __init__.py  bucketing.py  context.py  legacy_bedrock_import.py  marks.py  rows.py  service.py  summarizer.py  types.py
src/harness/memory/migrations/: 0001_initial.sql  0002_drop_one_minute_summaries.sql
src/harness/tools/: __init__.py  base.py  external.py  registry.py  sleep.py
tests/: conftest.py  fake_platform.py  test_adapter_e2e.py  test_cli_boot.py  test_cli_delete_agent.py  test_cli_reset_memory.py  test_core_http.py  test_feature_flags.py  test_harness_e2e.py  test_llm.py  test_memory.py  test_skeleton.py  test_storage.py  test_storage_libsql.py  test_tool_image_passthrough.py  test_tools.py
tests/evals/: test_fakes.py
tests/integration/: test_turso_live.py
tests/memory/: conftest.py  test_context.py  test_full_lifecycle.py  test_legacy_bedrock_import.py  test_marks.py  test_summarizer_previous_summaries.py
